syntax = "proto3";

package token;

import "aelf/core.proto";
import "aelf/options.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "AElf.Contracts.MultiToken";

service TokenContract {
  
  // Actions
  rpc Create (CreateInput) returns (google.protobuf.Empty) {
  }
  rpc Issue (IssueInput) returns (google.protobuf.Empty) {
  }
  rpc Transfer (TransferInput) returns (google.protobuf.Empty) {
  }
  rpc TransferFrom (TransferFromInput) returns (google.protobuf.Empty) {
  }
  rpc Approve (ApproveInput) returns (google.protobuf.Empty) {
  }
  rpc UnApprove (UnApproveInput) returns (google.protobuf.Empty) {
  }
  
  // Views
  rpc GetTokenInfo (GetTokenInfoInput) returns (TokenInfo) {
    option (aelf.is_view) = true;
  }
  rpc GetBalance (GetBalanceInput) returns (GetBalanceOutput) {
    option (aelf.is_view) = true;
  }
  rpc GetAllowance (GetAllowanceInput) returns (GetAllowanceOutput) {
    option (aelf.is_view) = true;
  }
}

message TokenInfo {
  string symbol = 1;
  string token_name = 2;
  int64 supply = 3;
  int64 total_supply = 4;
  int32 decimals = 5;
  aelf.Address issuer = 6;
  bool is_burnable = 7;
  int32 issue_chain_id = 9;
  int64 issued = 10;
}

message CreateInput {
  string symbol = 1;
  string token_name = 2;
  int64 total_supply = 3;
  int32 decimals = 4;
  aelf.Address issuer = 5;
  bool is_burnable = 6;
  repeated aelf.Address lock_white_list = 7;
  int32 issue_chain_id = 8;
}

message IssueInput {
  string symbol = 1;
  int64 amount = 2;
  string memo = 3;
  aelf.Address to = 4;
}

message TransferInput {
  aelf.Address to = 1;
  string symbol = 2;
  int64 amount = 3;
  string memo = 4;
}

message TransferFromInput {
  aelf.Address from = 1;
  aelf.Address to = 2;
  string symbol = 3;
  int64 amount = 4;
  string memo = 5;
}

message ApproveInput {
  aelf.Address spender = 1;
  string symbol = 2;
  int64 amount = 3;
}

message UnApproveInput {
  aelf.Address spender = 1;
  string symbol = 2;
  int64 amount = 3;
}

message GetTokenInfoInput {
  string symbol = 1;
}

message GetBalanceInput {
  string symbol = 1;
  aelf.Address owner = 2;
}

message GetBalanceOutput {
  string symbol = 1;
  aelf.Address owner = 2;
  int64 balance = 3;
}

message GetAllowanceInput {
  string symbol = 1;
  aelf.Address owner = 2;
  aelf.Address spender = 3;
}

message GetAllowanceOutput {
  string symbol = 1;
  aelf.Address owner = 2;
  aelf.Address spender = 3;
  int64 allowance = 4;
}