syntax = "proto3";

import "aelf/core.proto";
import "aelf/options.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "Protobuf/base/acs12.proto";
import "Protobuf/stub/token_contract.proto";

option csharp_namespace = "AElf.Contracts.BingoGameContract";

service BingoGameContract {
    option (aelf.csharp_state) = "AElf.Contracts.BingoGameContract.BingoGameContractState";
    option (aelf.base) = "Protobuf/base/acs12.proto";

    // Actions
    rpc Register (google.protobuf.Empty) returns (google.protobuf.Empty) {
    }
    rpc Play (PlayInput) returns (google.protobuf.Int64Value) {
    }
    rpc Bingo (aelf.Hash) returns (google.protobuf.BoolValue) {
    }
    rpc Quit (google.protobuf.Empty) returns (google.protobuf.Empty) {
    }
    rpc Initialize (google.protobuf.Empty) returns (google.protobuf.Empty) {
    }

    // Views
    rpc GetBoutInformation (GetBoutInformationInput) returns (BoutInformation) {
        option (aelf.is_view) = true;
    }
}

enum BingoType {
    Small = 0;
    Large = 1;
}

message PlayInput {
    int64 amount = 1;
    BingoType type = 2;
}

message GetBoutInformationInput {
    aelf.Hash play_id = 1;
}

message PlayerInformation {
    aelf.Hash seed = 1;
    repeated BoutInformation bouts = 2;
    google.protobuf.Timestamp register_time = 3;
}

message DiceList{
    repeated int32 dices = 1;
}

message BoutInformation {
    int64 play_block_height = 1;
    int64 amount = 2;
    int64 award = 3;
    bool is_complete = 4;
    aelf.Hash play_id = 5;
    int64 bingo_block_height = 6;
    BingoType type = 7;
    int32 random_number = 8;
    int64 round_number = 9;
    google.protobuf.Timestamp play_time = 10;
    DiceList dices = 11;
    aelf.Address player_address = 12;
}

message LimitSettings {
    int64 min_amount = 1;
    int64 max_amount = 2;
}